fix: remove horizontal scroll bar

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  width: 100vw;
+  overflow: hidden;
+}
+
 .main-section {
   margin: 0.8rem 0.2rem;
 }
